# BBC-SON-SURUM

./: .gitignore  BBC_TECHNICAL_REFERENCE_EN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.txt  QUICK_START.md  README.md  RELEASE_CHECKLIST_v8.3.0.md  SECURITY.md  SUPPORT.md  USER_GUIDE.md  bbc.bat  bbc.py  bbc.sh  bbc_daemon.py  bbc_installer.py  install_global.bat  install_global.sh  pyproject.toml  requirements.txt  run_bbc.py  setup.bat  setup.py  setup.sh  uninstall.bat  uninstall.sh
.github/workflows/: ci.yml  debian-package-test.yml
01_Engine/: __init__.py  analyze_file.py  create_recipe.py  get_stats.py  hmpu_api_v53.py  hmpu_core.py  hmpu_fused_pipeline.py  hmpu_indexer.py  hmpu_master_pipeline.py  hmpu_quantizer.py  hmpu_weights.json
bbc_core/: adapter.py  adaptive_mode.py  agent_adapter.py  ai_integration.py  attribution_tracer.py  auto_detector.py  auto_patcher.py  bbc_logger.py  bbc_scalar.py  change_tracker.py  cli.py  config.py  context_compiler.py  context_optimizer.py  git_hooks.py  global_menu.py  global_setup.py  hallucination_guard.py  hmpu_core.py  hmpu_indexer.py  hmpu_quantizer.py  http_server.py  ide_auto_config.py  ide_hooks.py  impact_analyzer.py  migrator_engine.py  native_adapter.py  requirements_core.txt  secret_detector.py  secret_patterns.json  state_manager.py  symbol_extractor.py  symbol_graph.py  telemetry.py  token_optimizer.py  verifier.py
packaging/: README.md
packaging/choco/: bbc.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
packaging/debian/: bbc-master.links  changelog  control  copyright  install
packaging/homebrew/: bbc.rb
tests/: test_secret_detector.py  test_smoke.py
